add modal and whatsapp functionality

--- a/css/style.css
+++ b/css/style.css
@@ -6484,4 +6484,10 @@ i:before {
 ============================================================================================ */
 /*---------------------------------------------------- */
 
+/*form css*/
+
+/*end of form css*/
+
 /*# sourceMappingURL=style.css.map */
+
+
