--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ Table of Content:
   animation-name: bgchange;
   animation-duration: 3s;
   animation-iteration-count: infinite;
-  z-index: 999;
+  z-index: 1000;
   position: fixed;
   transition: transform .2s;
 }
@@ -98,10 +98,12 @@ Table of Content:
   position: absolute;
   right: 2%;
   bottom: 3%;
-  z-index: 99;
+  z-index: 999;
   position: fixed;
-  transition: transform 500ms ease-in-out;
-  visibility: hidden;
+  transition: transform 500ms cubic-bezier(0.42, 0, 0, 2.03);
+  -ms-transform: scale(0.5); /* IE 9 */
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(0.5);
 }
 
 #whatsapp:hover{
@@ -120,10 +122,12 @@ Table of Content:
   position: absolute;
   right: 2%;
   bottom: 3%;
-  z-index: 99;
+  z-index: 999;
   position: fixed;
-  transition: transform 500ms ease-in-out;
-  visibility: hidden;
+  transition: transform 500ms cubic-bezier(0.42, 0, 0, 2.03);
+  -ms-transform: scale(0.5); /* IE 9 */
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(0.5);
 }
 
 #sms:hover{
@@ -143,10 +147,12 @@ Table of Content:
   position: absolute;
   right: 2%;
   bottom: 3%;
-  z-index: 99;
+  z-index: 999;
   position: fixed;
-  transition: transform 500ms ease-in-out;
-  visibility: hidden;
+  transition: transform 500ms cubic-bezier(0.42, 0, 0, 2.03);
+  -ms-transform: scale(0.5); /* IE 9 */
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(0.5);
 }
 #telegram:hover{
   -ms-transform: scale(1.2); /* IE 9 */
@@ -165,10 +171,12 @@ Table of Content:
   position: absolute;
   right: 2%;
   bottom: 3%;
-  z-index: 99;
+  z-index: 999;
   position: fixed;
-  transition: transform 500ms ease-in-out;
-  visibility: hidden;
+  transition: transform 500ms cubic-bezier(0.42, 0, 0, 2.03);
+  -ms-transform: scale(0.5); /* IE 9 */
+  -webkit-transform: scale(0.5); /* Safari 3-8 */
+  transform: scale(0.5);
 }
 #call:hover{
   -ms-transform: scale(1.2); /* IE 9 */
